--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -26,14 +26,14 @@ code[class*="language-"]::-moz-selection,
 pre[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection,
 pre[class*="language-"] ::-moz-selection {
-  background: #363636;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 code[class*="language-"]::selection,
 pre[class*="language-"]::selection,
 code[class*="language-"] ::selection,
 pre[class*="language-"] ::selection {
-  background: #363636;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 :not(pre) > code[class*="language-"] {
